# kovaaks

./: .gitignore  CHANGELOG.md  LIVE_VOICE_FEEDBACK.md  README.md  UE4SS_METHOD_STATUS.md  browser-overlay.html  index.html  logs.html  package.json  pnpm-lock.yaml  release-please-config.json  stats.html  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  dev.yml  release-please.yml  release.yml
scripts/: audit_stats_db.py  build-frontend-if-needed.mjs  dev-pipeline.ps1  dev-pipeline.sh  sync-ue4ss-payload.ps1  sync-ue4ss-payload.sh
scripts/ue4ss-settings/: development.ini  production.ini
src/: App.tsx  LogViewer.tsx  index.css  log.ts  logs-main.tsx  overlay-browser-main.tsx  stats-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.main-prod.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-frontend-if-needed.mjs
src-tauri/src/: app_version.rs  auto_setup.rs  benchmark_overlay.rs  bridge.rs  coaching.rs  discord_rpc.rs  file_watcher.rs  friend_scores.rs  hub_api.rs  hub_live_activity.rs  hub_sync.rs  kovaaks_api.rs  kovaaks_theme.rs  lib.rs  local_llm.rs  logger.rs  main.rs  mem_debug.rs  memory_reader.rs  mouse_hook.rs  ocr.rs  overlay_service.rs  replay_store.rs  sapi.rs  scenario_index.rs  screen_recorder.rs  session_store.rs  settings.rs  stats_db.rs  stats_ocr.rs  steam_api.rs  steam_integration.rs  target_response.rs  window_tracker.rs
src-tauri/src/bridge/: replay_handshake.rs  replay_protocol.rs  replay_streamer.rs  session_watchdog.rs
src/analytics/: DebugTab.tsx  HubBrowser.tsx  LeaderboardBrowser.tsx  LiveTab.tsx  MousePathViewer.tsx  SmoothnessReport.tsx  StatsWindow.tsx
src/coaching/: engine.ts
src/components/: ShortcutHelpModal.tsx
src/design/: tokens.ts  ui.tsx
src/hooks/: useAppTheme.ts  useLiveFeedback.ts  useLiveMemStats.ts  useLiveScore.ts  useMouseMetrics.ts  useOverlayRuntimeNotice.ts  useSessionSummary.ts  useStatsPanel.ts  useUpdater.ts
src/overlay/: AutoSetupHUD.tsx  BridgeStateDebugHUD.tsx  DebugStatsOCR.tsx  DraggableHUD.tsx  LiveFeedbackToast.tsx  LiveMemStatsHUD.tsx  PostSessionOverview.tsx  SmoothnessHUD.tsx  StatsHUD.tsx  VSMode.tsx
src/overlay-system/: DesktopOverlay.tsx  OverlayRenderer.tsx  applyPresetTheme.ts  presetUtils.ts
src/settings/: FriendManager.tsx  OverlayStudio.tsx  RegionPicker.tsx  Settings.tsx  UnifiedRegionPicker.tsx
src/types/: friends.ts  mouse.ts  overlay.ts  overlayPresets.ts  overlayRuntime.ts  settings.ts  stats.ts
ue4ss-mod/: CMakeLists.txt  README.md  ROADMAP.md  mod.json
ue4ss-mod/include/: rust_bridge.hpp
ue4ss-mod/src/: KovaaksBridgeMod.cpp  KovaaksBridgeMod.production.cpp  rust_bridge.cpp
ue4ss-mod/src/kmod/: emit_context.inl  in_game_overlay.inl  pull_source.inl  state_sync_request.inl  ui_poll_helpers.inl  ui_widget_probe.inl  user_management.inl
ue4ss-mod/src/kmod/replay/: bridge_command_bus.inl  replay_delta_codec.inl  replay_emit.inl  replay_ingame_playback.inl  replay_sampler.inl  replay_sources.inl  replay_state_machine.inl  replay_types.inl
ue4ss-rust-core/: Cargo.toml  README.md
ue4ss-rust-core/src/: lib.rs  pipe.rs
