[package]
name = "kovaaks-overlay"
version = "0.2.1"
description = "KovaaK's aim trainer overlay with OCR, smoothness analytics, and VS mode"
authors = []
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kovaaks_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screen capture + OCR — uses Windows built-in GDI + Windows.Media.Ocr (Win10+)
# Zero model files, ~5ms recognition, no ML dependencies.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media_Ocr",
    "Graphics_Imaging",
], optional = true }

# Mouse hook
rdev = "0.5"

# File watcher
notify = "6"

# CSV parsing
csv = "1"

# HTTP client — used for KovaaK's public API
reqwest = { version = "0.12", features = ["json"] }

# Utilities
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
thiserror = "1"
anyhow = "1"
strsim = "0.11"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[features]
default = []
ocr = ["windows"]

# Full release — slow to compile, smallest/fastest binary. Use for distribution.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Fast dev build — skips LTO, uses parallel codegen. Use while iterating.
[profile.dev-windows]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
strip = false
incremental = true

